--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               </li>
               <li class="card">
                 <div class="card-body">
-                  <img src=Accounts/currency-notes_15326442.png" alt="" />
+                  <img src="Accounts/currency-notes_15326442.png" alt="" />
                   <div class="card-info">
                     <p class="bold">Cash</p>
                     <p>Balance: <span class="green bold">₹2,323</span></p>
