--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </li>
               <li class="card">
                 <div class="card-body">
-                  <img src="accounts/bitcoin_1490849.png" alt="" />
+                  <img src="Accounts/bitcoin_1490849.png" alt="" />
                   <div class="card-info">
                     <p class="bold">Bitcoin</p>
                     <p>Balance: <span class="green bold">₹223</span></p>
@@ -112,27 +112,27 @@
               <p>Icons</p>
               <ul>
                 <li class="active">
-                  <img src="accounts/currency-notes_15326442.png" alt="" />
+                  <img src="Accounts/currency-notes_15326442.png" alt="" />
                 </li>
-                <li><img src="accounts/atm-card_8983163.png" alt="" /></li>
+                <li><img src="Accounts/atm-card_8983163.png" alt="" /></li>
 
                 <li>
-                  <img src="accounts/piggy-bank_15326531 (2).png" alt="" />
+                  <img src="Accounts/piggy-bank_15326531 (2).png" alt="" />
                 </li>
-                <li><img src="accounts/dollar-bag_15326399.png" alt="" /></li>
-                <li><img src="accounts/bitcoin_1490849.png" alt="" /></li>
+                <li><img src="Accounts/dollar-bag_15326399.png" alt="" /></li>
+                <li><img src="Accounts/bitcoin_1490849.png" alt="" /></li>
                 <li>
-                  <img src="accounts/business-target_15326317.png" alt="" />
+                  <img src="Accounts/business-target_15326317.png" alt="" />
                 </li>
 
-                <li><img src="accounts/business_15801144.png" alt="" /></li>
+                <li><img src="Accounts/business_15801144.png" alt="" /></li>
                 <li>
-                  <img src="accounts/currency-exchange_15326510.png" alt="" />
+                  <img src="Accounts/currency-exchange_15326510.png" alt="" />
                 </li>
 
-                <li><img src="accounts/business_15801114.png" alt="" /></li>
-                <li><img src="accounts/economy_3258522.png" alt="" /></li>
-                <li><img src="accounts/bank_12161294.png" alt="" /></li>
+                <li><img src="Accounts/business_15801114.png" alt="" /></li>
+                <li><img src="Accounts/economy_3258522.png" alt="" /></li>
+                <li><img src="Accounts/bank_12161294.png" alt="" /></li>
               </ul>
             </div>
             <div class="account-btns">
