--- a/index.html
+++ b/index.html
@@ -49,20 +49,28 @@
                     <p>Balance: <span class="green bold">₹23,323</span></p>
                   </div>
                 </div>
-                <div class="options">
-                  <img src="icons/dot.svg" alt="" />
+                <div class="operations">
+                  <img class="dot" src="icons/dot.svg" alt="" />
+                  <div class="options">
+                    <p class="edit-btn">Edit</p>
+                    <p class="delete-account">Delete</p>
+                  </div>
                 </div>
               </li>
               <li class="card">
                 <div class="card-body">
-                  <img src="Accounts/currency-notes_15326442.png" alt="" />
+                  <img src="Accounts/bank_12161294.png" alt="" />
                   <div class="card-info">
-                    <p class="bold">Cash</p>
+                    <p class="bold">Indian Bank</p>
                     <p>Balance: <span class="green bold">₹2,323</span></p>
                   </div>
                 </div>
-                <div class="options">
-                  <img src="icons/dot.svg" alt="" />
+                <div class="operations">
+                  <img class="dot" src="icons/dot.svg" alt="" />
+                  <div class="options">
+                    <p class="edit-btn">Edit</p>
+                    <p class="delete-account">Delete</p>
+                  </div>
                 </div>
               </li>
               <li class="card">
@@ -70,25 +78,18 @@
                   <img src="Accounts/piggy-bank_15326531 (2).png" alt="" />
                   <div class="card-info">
                     <p class="bold">Savings</p>
-                    <p>Balance: <span class="green bold">₹12,323</span></p>
+                    <p>Balance: <span class="green bold">₹3,323</span></p>
                   </div>
                 </div>
-                <div class="options">
-                  <img src="icons/dot.svg" alt="" />
-                </div>
-              </li>
-              <li class="card">
-                <div class="card-body">
-                  <img src="Accounts/bitcoin_1490849.png" alt="" />
-                  <div class="card-info">
-                    <p class="bold">Bitcoin</p>
-                    <p>Balance: <span class="green bold">₹223</span></p>
+                <div class="operations">
+                  <img class="dot" src="icons/dot.svg" alt="" />
+                  <div class="options">
+                    <p class="edit-btn">Edit</p>
+                    <p class="delete-account">Delete</p>
                   </div>
                 </div>
-                <div class="options">
-                  <img src="icons/dot.svg" alt="" />
-                </div>
               </li>
+             
             </ul>
           </div>
           <div class="add-account">
@@ -98,7 +99,7 @@
             </div>
           </div>
           <!-- add account -->
-          <div class="box-body active">
+          <div class="box-body">
             <header><h3>Add New Account</h3></header>
             <div class="input-container">
               <div class="input-body">
@@ -148,6 +149,60 @@
             <div class="account-btns">
               <button onclick="closeAccountBox()">cancle</button>
               <button onclick="saveAccount()">Save</button>
+            </div>
+          </div>
+
+          <!-- edit account -->
+          <div class="edit-box-body">
+            <header><h3>Edit Account</h3></header>
+            <div class="input-container">
+              <div class="input-body">
+                <input
+                  autocomplete="off"
+                  pattern="[0-9]*"
+                  required
+                  type="tel"
+                  id="edit-amount"
+                />
+                <label for="initial-amount">Amount</label>
+              </div>
+              <div class="input-body">
+                <input
+                  autocomplete="off"
+                  type="text"
+                  required
+                  id="edit-account-name"
+                />
+                <label for="account-name">Account name</label>
+              </div>
+            </div>
+            <div class="account-icons-parent">
+              <p>Select icons</p>
+              <ul class="account-list">
+                <li class="active">
+                  <img src="Accounts/currency-notes_15326442.png" alt="" />
+                </li>
+                <li><img src="Accounts/atm-card_8983163.png" alt="" /></li>
+                <li>
+                  <img src="Accounts/piggy-bank_15326531 (2).png" alt="" />
+                </li>
+                <li><img src="Accounts/dollar-bag_15326399.png" alt="" /></li>
+                <li><img src="Accounts/bitcoin_1490849.png" alt="" /></li>
+                <li>
+                  <img src="Accounts/business-target_15326317.png" alt="" />
+                </li>
+                <li><img src="Accounts/business_15801144.png" alt="" /></li>
+                <li>
+                  <img src="Accounts/currency-exchange_15326510.png" alt="" />
+                </li>
+                <li><img src="Accounts/business_15801114.png" alt="" /></li>
+                <li><img src="Accounts/economy_3258522.png" alt="" /></li>
+                <li><img src="Accounts/bank_12161294.png" alt="" /></li>
+              </ul>
+            </div>
+            <div class="account-btns">
+              <button onclick="closeEditBox()">cancle</button>
+              <button onclick="updateAccount()">Update</button>
             </div>
           </div>
         </section>
