--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <h3>Accounts</h3>
               <li class="card">
                 <div class="card-body">
-                  <img src="Accounts/atm-card_8983163.png" alt="" />
+                  <img src="Accounts/currency-notes_15326442.png" alt="" />
                   <div class="card-info">
                     <p class="bold">Card</p>
                     <p>Balance: <span class="green bold">₹23,323</span></p>
@@ -89,7 +89,6 @@
                   </div>
                 </div>
               </li>
-             
             </ul>
           </div>
           <div class="add-account">
@@ -147,8 +146,8 @@
               </ul>
             </div>
             <div class="account-btns">
-              <button onclick="closeAccountBox()">cancle</button>
-              <button onclick="saveAccount()">Save</button>
+              <button class="cancel-add-account">cancle</button>
+              <button class="save-accont-btn">Save</button>
             </div>
           </div>
 
@@ -201,8 +200,8 @@
               </ul>
             </div>
             <div class="account-btns">
-              <button onclick="closeEditBox()">cancle</button>
-              <button onclick="updateAccount()">Update</button>
+              <button class="cancelEdit">cancle</button>
+              <button class="updateBtn">Update</button>
             </div>
           </div>
         </section>
@@ -289,6 +288,7 @@
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script type="module"  src="script.js"></script>
+    <script type="module" src="functions.js"></script>
   </body>
 </html>
