--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <div class="account-container">
             <ul class="accounts">
               <h3>Accounts</h3>
-              <li class="card">
+              <!-- <li class="card">
                 <div class="card-body">
                   <img src="Accounts/currency-notes_15326442.png" alt="" />
                   <div class="card-info">
@@ -88,7 +88,7 @@
                     <p class="delete-account">Delete</p>
                   </div>
                 </div>
-              </li>
+              </li> -->
             </ul>
           </div>
           <div class="add-account">
