--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
         </div>
       </div>
     </div>
-    <script type="module"  src="script.js"></script>
+    <script async type="module"  src="script.js"></script>
     <script type="module" src="functions.js"></script>
   </body>
 </html>
