--- a/index.html
+++ b/index.html
@@ -132,16 +132,23 @@
                   <img src="Accounts/piggy-bank_15326531 (2).png" alt="" />
                 </li>
                 <li><img src="Accounts/dollar-bag_15326399.png" alt="" /></li>
+                <li><img src="Accounts/bank3D.jpg" alt="" /></li>
+                <li><img src="Accounts/canaraBank.png" alt="" /></li>
                 <li><img src="Accounts/bitcoin_1490849.png" alt="" /></li>
+                <li><img src="Accounts/wallet.jpg" alt="" /></li>
                 <li>
                   <img src="Accounts/business-target_15326317.png" alt="" />
                 </li>
+                <li><img src="Accounts/indianBank.png" alt="" /></li>
                 <li><img src="Accounts/business_15801144.png" alt="" /></li>
                 <li>
                   <img src="Accounts/currency-exchange_15326510.png" alt="" />
                 </li>
                 <li><img src="Accounts/business_15801114.png" alt="" /></li>
+                <li><img src="Accounts/gpay.png" alt="" /></li>
                 <li><img src="Accounts/economy_3258522.png" alt="" /></li>
+                <li><img src="Accounts/apay.jpg" alt="" /></li>
+                <li><img src="Accounts/sbi.png" alt="" /></li>
                 <li><img src="Accounts/bank_12161294.png" alt="" /></li>
               </ul>
             </div>
@@ -288,7 +295,7 @@
         </div>
       </div>
     </div>
-    <script async type="module"  src="script.js"></script>
+    <script async type="module" src="script.js"></script>
     <script type="module" src="functions.js"></script>
   </body>
 </html>
