--- a/index.html
+++ b/index.html
@@ -296,30 +296,9 @@
       </div>
     </div>
     <script>
-      //function for localstorage
-let data = JSON.parse(localStorage.getItem("data")) || [];
-data.forEach((item) => {
-  let existingAccounts = document.querySelector(".accounts");
-  let template = `<li class="card">
-                <div class="card-body">
-                  <img class="active" src="${item.imageSrc}" alt="" />
-                  <div class="card-info">
-                    <p class="bold">${item.accountName}</p>
-                    <p>Balance: <span class="green bold">₹${item.formatedAmount}</span></p>
-                  </div>
-                </div>
-                <div class="operations">
-                  <img class="dot" src="icons/dot.svg" alt="" />
-                  <div class="options">
-                    <p class="edit-btn">Edit</p>
-                    <p class="delete-account">Delete</p>
-                  </div>
-                </div>
-              </li>`;
-  existingAccounts.innerHTML += template;
-});
+      
     </script>
     <script async type="module" src="script.js"></script>
-    <script type="module" src="functions.js"></script>
+    <script defer type="module" src="functions.js"></script>
   </body>
 </html>
