--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
           </div>
           <!-- add account -->
-          <div class="box-body">
+          <div class="box-body active">
             <header><h3>Add New Account</h3></header>
             <div class="input-container">
               <div class="input-body">
@@ -132,22 +132,23 @@
                   <img src="Accounts/piggy-bank_15326531 (2).png" alt="" />
                 </li>
                 <li><img src="Accounts/dollar-bag_15326399.png" alt="" /></li>
-                <li><img src="Accounts/bank3D.jpg" alt="" /></li>
+                
+                <li><img src="Accounts/bank.png" alt="" /></li>
+                <li><img src="Accounts/wallet_3258446.png" alt="" /></li>
                 <li><img src="Accounts/canaraBank.png" alt="" /></li>
                 <li><img src="Accounts/bitcoin_1490849.png" alt="" /></li>
-                <li><img src="Accounts/wallet.jpg" alt="" /></li>
                 <li>
                   <img src="Accounts/business-target_15326317.png" alt="" />
                 </li>
                 <li><img src="Accounts/indianBank.png" alt="" /></li>
-                <li><img src="Accounts/business_15801144.png" alt="" /></li>
+
                 <li>
                   <img src="Accounts/currency-exchange_15326510.png" alt="" />
                 </li>
-                <li><img src="Accounts/business_15801114.png" alt="" /></li>
+                <li><img src="Accounts/visa.png" alt="" /></li>
                 <li><img src="Accounts/gpay.png" alt="" /></li>
                 <li><img src="Accounts/economy_3258522.png" alt="" /></li>
-                <li><img src="Accounts/apay.jpg" alt="" /></li>
+                <li><img src="Accounts/apay.png" alt="" /></li>
                 <li><img src="Accounts/sbi.png" alt="" /></li>
                 <li><img src="Accounts/bank_12161294.png" alt="" /></li>
               </ul>
@@ -190,18 +191,17 @@
                 </li>
                 <li><img src="Accounts/atm-card_8983163.png" alt="" /></li>
                 <li>
-                  <img src="Accounts/piggy-bank_15326531 (2).png" alt="" />
+                  <img src="Accounts/canaraBank.png" alt="" />
                 </li>
                 <li><img src="Accounts/dollar-bag_15326399.png" alt="" /></li>
                 <li><img src="Accounts/bitcoin_1490849.png" alt="" /></li>
                 <li>
                   <img src="Accounts/business-target_15326317.png" alt="" />
                 </li>
-                <li><img src="Accounts/business_15801144.png" alt="" /></li>
                 <li>
                   <img src="Accounts/currency-exchange_15326510.png" alt="" />
                 </li>
-                <li><img src="Accounts/business_15801114.png" alt="" /></li>
+                <li><img src="Accounts/visa.png" alt="" /></li>
                 <li><img src="Accounts/economy_3258522.png" alt="" /></li>
                 <li><img src="Accounts/bank_12161294.png" alt="" /></li>
               </ul>
@@ -295,9 +295,7 @@
         </div>
       </div>
     </div>
-    <script>
-      
-    </script>
+    <script></script>
     <script async type="module" src="script.js"></script>
     <script defer type="module" src="functions.js"></script>
   </body>
