--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
           </div>
           <!-- add account -->
-          <div class="box-body active">
+          <div class="box-body">
             <header><h3>Add New Account</h3></header>
             <div class="input-container">
               <div class="input-body">
