--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                   <img src="Accounts/piggy-bank_15326531 (2).png" alt="" />
                 </li>
                 <li><img src="Accounts/dollar-bag_15326399.png" alt="" /></li>
-                
+
                 <li><img src="Accounts/bank.png" alt="" /></li>
                 <li><img src="Accounts/wallet_3258446.png" alt="" /></li>
                 <li><img src="Accounts/canaraBank.png" alt="" /></li>
@@ -191,18 +191,27 @@
                 </li>
                 <li><img src="Accounts/atm-card_8983163.png" alt="" /></li>
                 <li>
-                  <img src="Accounts/canaraBank.png" alt="" />
+                  <img src="Accounts/piggy-bank_15326531 (2).png" alt="" />
                 </li>
                 <li><img src="Accounts/dollar-bag_15326399.png" alt="" /></li>
+
+                <li><img src="Accounts/bank.png" alt="" /></li>
+                <li><img src="Accounts/wallet_3258446.png" alt="" /></li>
+                <li><img src="Accounts/canaraBank.png" alt="" /></li>
                 <li><img src="Accounts/bitcoin_1490849.png" alt="" /></li>
                 <li>
                   <img src="Accounts/business-target_15326317.png" alt="" />
                 </li>
+                <li><img src="Accounts/indianBank.png" alt="" /></li>
+
                 <li>
                   <img src="Accounts/currency-exchange_15326510.png" alt="" />
                 </li>
                 <li><img src="Accounts/visa.png" alt="" /></li>
+                <li><img src="Accounts/gpay.png" alt="" /></li>
                 <li><img src="Accounts/economy_3258522.png" alt="" /></li>
+                <li><img src="Accounts/apay.png" alt="" /></li>
+                <li><img src="Accounts/sbi.png" alt="" /></li>
                 <li><img src="Accounts/bank_12161294.png" alt="" /></li>
               </ul>
             </div>
