--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Penny Partner</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="category.css" />
   </head>
   <body>
     <div class="app">
@@ -19,7 +20,7 @@
         <section class="home">h</section>
         <section class="analysis">e</section>
         <section class="budgets">l</section>
-        <section class="account active">
+        <section class="account">
           <header class="account-header">
             <h3>Overall</h3>
             <div class="penny-info">
@@ -189,7 +190,118 @@
             </div>
           </div>
         </section>
-        <section class="categories">0</section>
+        <section class="categories active">
+          <div class="category-container">
+            <div class="income-category">
+              <h3>Income categories</h3>
+            </div>
+            <div class="expense-category">
+              <h3>Expense categories</h3>
+              <ul>
+                <li>
+                  <div class="left-portion">
+                    <img class="food" src="icons/Expense Icons/food.png" alt="" />
+                    <p class="change-font-style">Food</p>
+                  </div>
+                  <div class="right-portion">
+                    <img src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img class="health" src="icons/Expense Icons/health.png" alt="" />
+                    <p class="change-font-style">Health</p>
+                  </div>
+                  <div class="right-portion">
+                    <img src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img class="cloth" src="icons/Expense Icons/cloth.png" alt="" />
+                    <p class="change-font-style">Clothing</p>
+                  </div>
+                  <div class="right-portion">
+                    <img src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img class="mobile" src="icons/Expense Icons/phone.png" alt="" />
+                    <p class="change-font-style">Mobile Recharge</p>
+                  </div>
+                  <div class="right-portion">
+                    <img src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img class="education" src="icons/Expense Icons/education.png" alt="" />
+                    <p class="change-font-style">Education</p>
+                  </div>
+                  <div class="right-portion">
+                    <img src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img class="shopping" src="icons/Expense Icons/shopping.png" alt="" />
+                    <p class="change-font-style">Shopping</p>
+                  </div>
+                  <div class="right-portion">
+                    <img src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img class="elctronics" src="icons/Expense Icons/electronics.png" alt="" />
+                    <p class="change-font-style">Electronics</p>
+                  </div>
+                  <div class="right-portion">
+                    <img src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img class="entertain" src="icons/Expense Icons/movie.png" alt="" />
+                    <p class="change-font-style">Entertainment</p>
+                  </div>
+                  <div class="right-portion">
+                    <img src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+
+                <li>
+                  <div class="left-portion">
+                    <img class="insurance" src="icons/Expense Icons/insurance.png" alt="" />
+                    <p class="change-font-style">Insurance</p>
+                  </div>
+                  <div class="right-portion">
+                    <img src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img class="computer" src="icons/Expense Icons/computer.png" alt="" />
+                    <p class="change-font-style">Computer</p>
+                  </div>
+                  <div class="right-portion">
+                    <img src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img class="car" src="icons/Expense Icons/car.png" alt="" />
+                    <p class="change-font-style">Car</p>
+                  </div>
+                  <div class="right-portion">
+                    <img src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
       </main>
       <footer>
         <nav>
@@ -272,7 +384,7 @@
         </div>
       </div>
     </div>
-    <script></script>
+
     <script async type="module" src="script.js"></script>
     <script defer type="module" src="functions.js"></script>
   </body>
