--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <div class="app">
       <header class="main">
         <div class="left">
-          <img class="hamburger" src="icons/hamburger.svg" alt="" />
+          <img class="hamburger svg" src="icons/hamburger.svg" alt="" />
           <h2>Penny Partner</h2>
         </div>
-        <img src="icons/search.svg" alt="" />
+        <img class="svg" src="icons/search.svg" alt="" />
       </header>
       <main>
         <section class="home">h</section>
         <section class="analysis">e</section>
         <section class="budgets">l</section>
-        <section class="account">
+        <section class="account active">
           <header class="account-header">
             <h3>Overall</h3>
             <div class="penny-info">
@@ -62,7 +62,7 @@
           </div>
           <div class="add-account">
             <div class="add-box">
-              <img src="icons/plus.svg" alt="" />
+              <img class="svg" src="icons/plus.svg" alt="" />
               <p>ADD NEW ACCOUNT</p>
             </div>
           </div>
@@ -190,7 +190,7 @@
             </div>
           </div>
         </section>
-        <section class="categories active">
+        <section class="categories">
           <div class="category-container">
             <div class="income-category">
               <h3>Income categories</h3>
@@ -307,23 +307,23 @@
         <nav>
           <ul>
             <li>
-              <img src="icons/home.svg" alt="" />
+              <img class="svg" src="icons/home.svg" alt="" />
               <small>Records</small>
             </li>
             <li>
-              <img src="icons/analysis.svg" alt="" />
+              <img class="svg" src="icons/analysis.svg" alt="" />
               <small>Analysis</small>
             </li>
             <li>
-              <img src="icons/calculator.svg" alt="" />
+              <img class="svg" src="icons/calculator.svg" alt="" />
               <small>Budgets</small>
             </li>
             <li>
-              <img src="icons/account.svg" alt="" />
+              <img class="svg" src="icons/account.svg" alt="" />
               <small>Accounts</small>
             </li>
             <li>
-              <img src="icons/category.svg" alt="" />
+              <img class="svg" src="icons/category.svg" alt="" />
               <small>categories</small>
             </li>
           </ul>
@@ -338,35 +338,35 @@
         <div class="settings">
           <ul>
             <li>
-              <img src="icons/edit.svg" alt="" />
+              <img class="svg" src="icons/edit.svg" alt="" />
               <div class="info">
                 <p>Ganesh</p>
                 <small>Tap to edit username</small>
               </div>
             </li>
-            <li>
-              <img src="icons/sun.svg" alt="" />
+            <li class="theme">
+              <img class="svg" src="icons/sun.svg" alt="" />
               <div class="info">
                 <p>Preference</p>
                 <small>Click to change theme</small>
               </div>
             </li>
             <li>
-              <img src="icons/reset.svg" alt="" />
+              <img class="svg" src="icons/reset.svg" alt="" />
               <div class="info">
                 <p>Reset</p>
                 <small>Reset app to initial state</small>
               </div>
             </li>
             <li>
-              <img src="icons/logout.svg" alt="" />
+              <img class="svg" src="icons/logout.svg" alt="" />
               <div class="info">
                 <p>Logout</p>
                 <small>Double click to logout</small>
               </div>
             </li>
             <li>
-              <img src="icons/delete.svg" alt="" />
+              <img class="svg" src="icons/delete.svg" alt="" />
               <div class="info">
                 <p>Delete</p>
                 <small>Delete everything</small>
@@ -374,7 +374,7 @@
             </li>
 
             <li>
-              <img src="icons/arrrow.svg" alt="" />
+              <img class="svg" src="icons/arrrow.svg" alt="" />
               <div class="info">
                 <p>Privacy Policy</p>
                 <small>Know our privacy policy</small>
