--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
             <h3>Overall</h3>
             <div class="penny-info">
               <div class="top">
-                <div class="expense">
-                  <p>EXPENSE SO FAR</p>
+                <div class=Income-expense               <p>EXPENSE SO FAR</p>
                   <b class="red bold">-₹5,000</b>
                 </div>
                 <div class="income">
@@ -194,108 +193,254 @@
           <div class="category-container">
             <div class="income-category">
               <h3>Income categories</h3>
+              <ul>
+                <li>
+                  <div class="left-portion">
+                    <img 
+                      class="awards"
+                      src="../awards.png"
+                      alt=""
+                    />
+                    <p class="change-font-style">Awards</p>
+                  </div>
+                  <div class="right-portion">
+                    <img class="svg" src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img
+                      class="cupon"
+                      src="../cupon.png"
+                      alt=""
+                    />
+                    <p class="change-font-style">Cupons</p>
+                  </div>
+                  <div class="right-portion">
+                    <img class="svg" src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img
+                      class="grant"
+                      src="../grants.png"
+                      alt=""
+                    />
+                    <p class="change-font-style">Grants</p>
+                  </div>
+                  <div class="right-portion">
+                    <img class="svg" src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img
+                      class="lottery"
+                      src="../lottery.png"
+                      alt=""
+                    />
+                    <p class="change-font-style">Lottery</p>
+                  </div>
+                  <div class="right-portion">
+                    <img class="svg" src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img
+                      class="refund"
+                      src="../refunds.png"
+                      alt=""
+                    />
+                    <p class="change-font-style">Refunds</p>
+                  </div>
+                  <div class="right-portion">
+                    <img class="svg" src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img
+                      class="rent"
+                      src="../rent.png"
+                      alt=""
+                    />
+                    <p class="change-font-style">Rental</p>
+                  </div>
+                  <div class="right-portion">
+                    <img class="svg" src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img
+                      class="salary"
+                      src="../salary.png"
+                      alt=""
+                    />
+                    <p class="change-font-style">Salary</p>
+                  </div>
+                  <div class="right-portion">
+                    <img class="svg" src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+                <li>
+                  <div class="left-portion">
+                    <img
+                      class="sale"
+                      src="../sales.png"
+                      alt=""
+                    />
+                    <p class="change-font-style">Sale</p>
+                  </div>
+                  <div class="right-portion">
+                    <img class="svg" src="icons/dot.svg" alt="" />
+                  </div>
+                </li>
+              </ul>
             </div>
             <div class="expense-category">
               <h3>Expense categories</h3>
               <ul>
                 <li>
                   <div class="left-portion">
-                    <img class="food" src="icons/Expense Icons/food.png" alt="" />
+                    <img
+                      class="food"
+                      src="icons/Income-expense/food.png"
+                      alt=""
+                    />
                     <p class="change-font-style">Food</p>
                   </div>
                   <div class="right-portion">
-                    <img src="icons/dot.svg" alt="" />
+                    <img class="svg" src="icons/dot.svg" alt="" />
                   </div>
                 </li>
                 <li>
                   <div class="left-portion">
-                    <img class="health" src="icons/Expense Icons/health.png" alt="" />
+                    <img
+                      class="health"
+                      src="icons/Income-expense/health.png"
+                      alt=""
+                    />
                     <p class="change-font-style">Health</p>
                   </div>
                   <div class="right-portion">
-                    <img src="icons/dot.svg" alt="" />
+                    <img class="svg" src="icons/dot.svg" alt="" />
                   </div>
                 </li>
                 <li>
                   <div class="left-portion">
-                    <img class="cloth" src="icons/Expense Icons/cloth.png" alt="" />
+                    <img
+                      class="cloth"
+                      src="icons/Income-expense/cloth.png"
+                      alt=""
+                    />
                     <p class="change-font-style">Clothing</p>
                   </div>
                   <div class="right-portion">
-                    <img src="icons/dot.svg" alt="" />
+                    <img class="svg" src="icons/dot.svg" alt="" />
                   </div>
                 </li>
                 <li>
                   <div class="left-portion">
-                    <img class="mobile" src="icons/Expense Icons/phone.png" alt="" />
+                    <img
+                      class="mobile"
+                      src="icons/Income-expense/phone.png"
+                      alt=""
+                    />
                     <p class="change-font-style">Mobile Recharge</p>
                   </div>
                   <div class="right-portion">
-                    <img src="icons/dot.svg" alt="" />
+                    <img class="svg" src="icons/dot.svg" alt="" />
                   </div>
                 </li>
                 <li>
                   <div class="left-portion">
-                    <img class="education" src="icons/Expense Icons/education.png" alt="" />
+                    <img
+                      class="education"
+                      src="icons/Income-expense/education.png"
+                      alt=""
+                    />
                     <p class="change-font-style">Education</p>
                   </div>
                   <div class="right-portion">
-                    <img src="icons/dot.svg" alt="" />
+                    <img class="svg" src="icons/dot.svg" alt="" />
                   </div>
                 </li>
                 <li>
                   <div class="left-portion">
-                    <img class="shopping" src="icons/Expense Icons/shopping.png" alt="" />
+                    <img
+                      class="shopping"
+                      src="icons/Income-expense/shopping.png"
+                      alt=""
+                    />
                     <p class="change-font-style">Shopping</p>
                   </div>
                   <div class="right-portion">
-                    <img src="icons/dot.svg" alt="" />
+                    <img class="svg" src="icons/dot.svg" alt="" />
                   </div>
                 </li>
                 <li>
                   <div class="left-portion">
-                    <img class="elctronics" src="icons/Expense Icons/electronics.png" alt="" />
+                    <img
+                      class="elctronics"
+                      src="icons/Income-expense/electronics.png"
+                      alt=""
+                    />
                     <p class="change-font-style">Electronics</p>
                   </div>
                   <div class="right-portion">
-                    <img src="icons/dot.svg" alt="" />
+                    <img class="svg" src="icons/dot.svg" alt="" />
                   </div>
                 </li>
                 <li>
                   <div class="left-portion">
-                    <img class="entertain" src="icons/Expense Icons/movie.png" alt="" />
+                    <img
+                      class="entertain"
+                      src="icons/Income-expense/movie.png"
+                      alt=""
+                    />
                     <p class="change-font-style">Entertainment</p>
                   </div>
                   <div class="right-portion">
-                    <img src="icons/dot.svg" alt="" />
+                    <img class="svg" src="icons/dot.svg" alt="" />
                   </div>
                 </li>
 
                 <li>
                   <div class="left-portion">
-                    <img class="insurance" src="icons/Expense Icons/insurance.png" alt="" />
+                    <img
+                      class="insurance"
+                      src="icons/Income-expense/insurance.png"
+                      alt=""
+                    />
                     <p class="change-font-style">Insurance</p>
                   </div>
                   <div class="right-portion">
-                    <img src="icons/dot.svg" alt="" />
+                    <img class="svg" src="icons/dot.svg" alt="" />
                   </div>
                 </li>
                 <li>
                   <div class="left-portion">
-                    <img class="computer" src="icons/Expense Icons/computer.png" alt="" />
+                    <img
+                      class="computer"
+                      src="icons/Income-expense/computer.png"
+                      alt=""
+                    />
                     <p class="change-font-style">Computer</p>
                   </div>
                   <div class="right-portion">
-                    <img src="icons/dot.svg" alt="" />
+                    <img class="svg" src="icons/dot.svg" alt="" />
                   </div>
                 </li>
                 <li>
                   <div class="left-portion">
-                    <img class="car" src="icons/Expense Icons/car.png" alt="" />
+                    <img class="car" src="icons/Income-expense/car.png" alt="" />
                     <p class="change-font-style">Car</p>
                   </div>
                   <div class="right-portion">
-                    <img src="icons/dot.svg" alt="" />
+                    <img class="svg" src="icons/dot.svg" alt="" />
                   </div>
                 </li>
               </ul>
